2003-09-29  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-location.c, cong-node.c, cong-node.h, cursor.c, xmldata.c

	Added function to determine valid cursor locations (prior to adding comment editing support)

	* cong-dispspec.c, cong-dispspec.h, cong-editor-node-text.c, cong-node.c, cong-node.h, global.h, plugin-cleanup-source.c

	Added whitespace attribute to dispspec elements, made Cleanup Source respect it, made beginnings of support in main editor view

2003-09-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* tree.c

	Removed redundant whitespace nodes that were added when adding new structural elements
	
2003-09-27  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>
 
        * cong-parser-error.c
 
	Added syntax highlighting to the parser error dialog.

2003-09-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.h, cong-util.h

	Formating fixes for gtkdoc

	* cong-text-cache.c

	Allow going one character beyond the end of buffer, to allow for sane cursor movement (bug #121066 again)

	* cong-editor-area-text-fragment.c

	Allow clicking beyond the end of the fragment of text, to make it easy to select past the end of a line (bug #121066)
	
	* cong-editor-area-line.c

	Make final subarea of line take remaining horizontal allocation

	* cong-editor-area-composer.c, cong-editor-area-composer.h

	Ability to change child packing after child is added

	--- Version 0.7.4 ---

2003-09-24  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>

	* cong-source-view.c, Makefile.am

	Added syntax highlighting to source view through GtkSourceView.

	* cong-editor-widget3.c
 
	Delete the current selection when typing anything (bug #122719).

2003-09-24  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-location.c

	Rewrite of 3-year old cursor->left logic (based on work by Amaury Jacquot)
	
	* cong-node.c

	Rewrite of overzealous g_assert that was stopping entities working (cf bug #122967 and about 10 dups)
